--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formula</title>
+    <title>Area Formulas</title>
 
 <style>
   body {font-family: sans-serif}
@@ -85,6 +85,7 @@
   </tr>
 </table>
 
-    
+<script src="domOperations.js"></script>   
+<script src="libraryFormula.js"></script>
 </body>
 </html>
